--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
 
-# Unique identifier for your project in SonarQube
-sonar.projectKey=my-debian-app
-sonar.projectName=My Debian Application
-sonar.projectVersion=1.0
+# # Unique identifier for your project in SonarQube
+# sonar.projectKey=my-debian-app
+# sonar.projectName=My Debian Application
+# sonar.projectVersion=1.0
 
-# Path to the source code (relative to this file)
-sonar.sources=src
+# # Path to the source code (relative to this file)
+# sonar.sources=src
 
-# For Java projects, specify the path to compiled classes
-# sonar.java.binaries=target/classes
+# # For Java projects, specify the path to compiled classes
+# # sonar.java.binaries=target/classes
 
-# Encoding of the source code
-sonar.sourceEncoding=UTF-8
+# # Encoding of the source code
+# sonar.sourceEncoding=UTF-8
